Tools/idl2c/y.output
   0  $accept : specification $end

   1  specification : at_least_one_definition

   2  at_least_one_definition : definition at_least_one_definition
   3                          | definition

   4  definition : type_dcl ';'
   5             | const_dcl ';'
   6             | except_dcl ';'
   7             | interface ';'
   8             | module ';'
   9             | value ';'

  10  module : MODULE IDENTIFIER '{' at_least_one_definition '}'

  11  interface : interface_dcl
  12            | forward_dcl

  13  interface_dcl : interface_header '{' interface_body '}'

  14  forward_dcl : INTERFACE IDENTIFIER

  15  interface_header : INTERFACE IDENTIFIER inheritance_spec
  16                   | INTERFACE IDENTIFIER

  17  interface_body : exports

  18  exports : export exports
  19          |

  20  export : type_dcl ';'
  21         | const_dcl ';'
  22         | except_dcl ';'
  23         | attr_dcl ';'
  24         | op_dcl ';'

  25  inheritance_spec : ':' scoped_name extends_inheritance

  26  extends_inheritance : ',' scoped_name extends_inheritance
  27                      |

  28  interface_name : scoped_name

  29  scoped_name : IDENTIFIER
  30              | SCOPE_DELIMITOR IDENTIFIER
  31              | scoped_name SCOPE_DELIMITOR IDENTIFIER

  32  value : value_dcl
  33        | value_abs_dcl
  34        | value_box_dcl
  35        | value_forward_dcl

  36  value_forward_dcl : ABSTRACT VALUETYPE IDENTIFIER
  37                    | VALUETYPE IDENTIFIER

  38  value_box_dcl : VALUETYPE IDENTIFIER type_spec

  39  value_abs_dcl : ABSTRACT VALUETYPE IDENTIFIER value_inheritance_spec '{' exports '}'
  40                | ABSTRACT VALUETYPE IDENTIFIER '{' exports '}'

  41  value_dcl : value_header '{' value_elements '}'

  42  value_header : CUSTOM VALUETYPE IDENTIFIER value_inheritance_spec
  43               | VALUETYPE IDENTIFIER value_inheritance_spec
  44               | CUSTOM VALUETYPE IDENTIFIER
  45               | VALUETYPE IDENTIFIER

  46  value_inheritance_spec : ':' TRANCATABLE value_name extends_value_name SUPPORTS interface_name extends_interface_name
  47                         | ':' value_name extends_value_name SUPPORTS interface_name extends_interface_name
  48                         | ':' TRANCATABLE value_name extends_value_name
  49                         | ':' value_name extends_value_name
  50                         | SUPPORTS interface_name extends_interface_name

  51  extends_interface_name : ',' interface_name extends_interface_name
  52                         |

  53  extends_value_name : ',' value_name extends_value_name
  54                     |

  55  value_name : scoped_name

  56  value_elements : value_element value_elements
  57                 |

  58  value_element : export
  59                | state_member
  60                | init_dcl

  61  state_member : PUBLIC type_spec declarators ';'
  62               | PRIVATE type_spec declarators ';'

  63  init_dcl : FACTORY IDENTIFIER '(' init_param_decls ')' ';'
  64           | FACTORY IDENTIFIER '(' ')' ';'

  65  init_param_decls : init_param_decl extends_init_param_decl

  66  extends_init_param_decl : ',' init_param_decl extends_init_param_decl
  67                          |

  68  init_param_decl : init_param_attribute param_type_spec simple_declarator

  69  init_param_attribute : IN

  70  const_dcl : CONST const_type IDENTIFIER '=' const_exp

  71  const_type : integer_type
  72             | char_type
  73             | boolean_type
  74             | floating_pt_type
  75             | string_type
  76             | scoped_name

  77  const_exp : or_expr

  78  or_expr : xor_expr
  79          | or_expr '|' xor_expr

  80  xor_expr : and_expr
  81           | xor_expr '^' and_expr

  82  and_expr : shift_expr
  83           | and_expr '&' shift_expr

  84  shift_expr : add_expr
  85             | shift_expr RIGHT_SHIFT add_expr
  86             | shift_expr LEFT_SHIFT add_expr

  87  add_expr : mult_expr
  88           | add_expr '+' mult_expr
  89           | add_expr '-' mult_expr

  90  mult_expr : unary_expr
  91            | mult_expr '*' unary_expr
  92            | mult_expr '/' unary_expr
  93            | mult_expr '%' unary_expr

  94  unary_expr : unary_operator primary_expr
  95             | primary_expr

  96  unary_operator : '-'
  97                 | '+'
  98                 | '~'

  99  primary_expr : scoped_name
 100               | literal
 101               | '(' const_exp ')'

 102  literal : INTEGER_LITERAL
 103          | STRING_LITERAL
 104          | CHARACTER_LITERAL
 105          | FLOATING_PT_LITERAL
 106          | boolean_literal

 107  boolean_literal : TRUE_TOKEN
 108                  | FALSE_TOKEN

 109  positive_int_const : const_exp

 110  type_dcl : TYPEDEF type_declarator
 111           | struct_type
 112           | union_type
 113           | enum_type

 114  type_declarator : type_spec declarators

 115  type_spec : simple_type_spec
 116            | constr_type_spec

 117  simple_type_spec : base_type_spec
 118                   | template_type_spec
 119                   | scoped_name

 120  base_type_spec : floating_pt_type
 121                 | integer_type
 122                 | char_type
 123                 | wide_char_type
 124                 | boolean_type
 125                 | octet_type
 126                 | any_type
 127                 | object_type

 128  template_type_spec : sequence_type
 129                     | string_type

 130  constr_type_spec : struct_type
 131                   | union_type
 132                   | enum_type

 133  declarators : declarator extend_declarators

 134  extend_declarators : ',' declarator extend_declarators
 135                     |

 136  declarator : simple_declarator
 137             | complex_declarator

 138  simple_declarator : IDENTIFIER

 139  complex_declarator : array_declarator

 140  floating_pt_type : FLOAT
 141                   | DOUBLE

 142  integer_type : signed_int
 143               | unsigned_int

 144  signed_int : signed_long_long_int
 145             | signed_long_int
 146             | signed_short_int

 147  signed_long_long_int : LONG LONG

 148  signed_long_int : LONG

 149  signed_short_int : SHORT

 150  unsigned_int : unsigned_long_long_int
 151               | unsigned_long_int
 152               | unsigned_short_int

 153  unsigned_long_long_int : UNSIGNED LONG LONG

 154  unsigned_long_int : UNSIGNED LONG

 155  unsigned_short_int : UNSIGNED SHORT

 156  char_type : CHAR

 157  wide_char_type : WCHAR

 158  boolean_type : BOOLEAN

 159  octet_type : OCTET

 160  any_type : ANY

 161  object_type : OBJECT

 162  struct_type : STRUCT IDENTIFIER '{' member_list '}'

 163  member_list : at_least_one_member

 164  at_least_one_member : member members

 165  members : member members
 166          |

 167  member : type_spec declarators ';'

 168  union_type : UNION IDENTIFIER SWITCH '(' switch_type_spec ')' '{' switch_body '}'

 169  switch_type_spec : integer_type
 170                   | char_type
 171                   | boolean_type
 172                   | enum_type
 173                   | scoped_name

 174  switch_body : at_least_one_case

 175  at_least_one_case : case at_least_one_case
 176                    | case

 177  case : at_least_one_case_label element_spec ';'

 178  at_least_one_case_label : case_label at_least_one_case_label
 179                          | case_label

 180  case_label : CASE const_exp ':'
 181             | DEFAULT ':'

 182  element_spec : type_spec declarator

 183  enum_type : ENUM IDENTIFIER '{' enumerator extends_enum '}'

 184  extends_enum : ',' enumerator extends_enum
 185               |

 186  enumerator : IDENTIFIER

 187  sequence_type : SEQUENCE '<' simple_type_spec ',' positive_int_const '>'
 188                | SEQUENCE '<' simple_type_spec '>'

 189  string_type : STRING '<' positive_int_const '>'
 190              | STRING

 191  array_declarator : IDENTIFIER at_least_one_fixed_array_size

 192  at_least_one_fixed_array_size : fixed_array_size at_least_one_fixed_array_size
 193                                | fixed_array_size

 194  fixed_array_size : '[' positive_int_const ']'

 195  attr_dcl : ATTRIBUTE param_type_spec simple_declarator extends_attr
 196           | READONLY ATTRIBUTE param_type_spec simple_declarator extends_attr

 197  extends_attr : ',' simple_declarator extends_attr
 198               |

 199  except_dcl : EXCEPTION IDENTIFIER '{' members '}'

 200  op_dcl : op_type_spec IDENTIFIER parameter_dcls
 201         | op_attribute op_type_spec IDENTIFIER parameter_dcls
 202         | op_type_spec IDENTIFIER parameter_dcls raises_expr
 203         | op_attribute op_type_spec IDENTIFIER parameter_dcls raises_expr
 204         | op_type_spec IDENTIFIER parameter_dcls raises_expr context_expr
 205         | op_attribute op_type_spec IDENTIFIER parameter_dcls raises_expr context_expr

 206  op_attribute : ONEWAY

 207  op_type_spec : param_type_spec
 208               | VOID

 209  parameter_dcls : '(' param_dcl extends_param ')'
 210                 | '(' ')'

 211  extends_param : ',' param_dcl extends_param
 212                |

 213  param_dcl : param_attribute param_type_spec simple_declarator

 214  param_attribute : IN
 215                  | OUT
 216                  | INOUT

 217  raises_expr : RAISES '(' scoped_name extends_raises ')'

 218  extends_raises : ',' scoped_name
 219                 |

 220  context_expr : CONTEXT '(' STRING_LITERAL extends_context ')'

 221  extends_context : ',' STRING_LITERAL extends_context
 222                  |

 223  param_type_spec : base_type_spec
 224                  | string_type
 225                  | scoped_name

state 0
	$accept : . specification $end  (0)

	ABSTRACT  shift 1
	CONST  shift 2
	CUSTOM  shift 3
	ENUM  shift 4
	EXCEPTION  shift 5
	INTERFACE  shift 6
	MODULE  shift 7
	STRUCT  shift 8
	TYPEDEF  shift 9
	UNION  shift 10
	VALUETYPE  shift 11
	.  error

	specification  goto 12
	at_least_one_definition  goto 13
	definition  goto 14
	type_dcl  goto 15
	const_dcl  goto 16
	except_dcl  goto 17
	interface  goto 18
	module  goto 19
	value  goto 20
	interface_dcl  goto 21
	forward_dcl  goto 22
	interface_header  goto 23
	value_dcl  goto 24
	value_abs_dcl  goto 25
	value_box_dcl  goto 26
	value_forward_dcl  goto 27
	value_header  goto 28
	struct_type  goto 29
	union_type  goto 30
	enum_type  goto 31


state 1
	value_forward_dcl : ABSTRACT . VALUETYPE IDENTIFIER  (36)
	value_abs_dcl : ABSTRACT . VALUETYPE IDENTIFIER value_inheritance_spec '{' exports '}'  (39)
	value_abs_dcl : ABSTRACT . VALUETYPE IDENTIFIER '{' exports '}'  (40)

	VALUETYPE  shift 32
	.  error


state 2
	const_dcl : CONST . const_type IDENTIFIER '=' const_exp  (70)

	BOOLEAN  shift 33
	CHAR  shift 34
	DOUBLE  shift 35
	FLOAT  shift 36
	LONG  shift 37
	SHORT  shift 38
	STRING  shift 39
	UNSIGNED  shift 40
	SCOPE_DELIMITOR  shift 41
	IDENTIFIER  shift 42
	.  error

	floating_pt_type  goto 43
	integer_type  goto 44
	signed_int  goto 45
	signed_long_long_int  goto 46
	signed_long_int  goto 47
	signed_short_int  goto 48
	unsigned_int  goto 49
	unsigned_long_long_int  goto 50
	unsigned_long_int  goto 51
	unsigned_short_int  goto 52
	char_type  goto 53
	boolean_type  goto 54
	string_type  goto 55
	scoped_name  goto 56
	const_type  goto 57


state 3
	value_header : CUSTOM . VALUETYPE IDENTIFIER value_inheritance_spec  (42)
	value_header : CUSTOM . VALUETYPE IDENTIFIER  (44)

	VALUETYPE  shift 58
	.  error


state 4
	enum_type : ENUM . IDENTIFIER '{' enumerator extends_enum '}'  (183)

	IDENTIFIER  shift 59
	.  error


state 5
	except_dcl : EXCEPTION . IDENTIFIER '{' members '}'  (199)

	IDENTIFIER  shift 60
	.  error


state 6
	forward_dcl : INTERFACE . IDENTIFIER  (14)
	interface_header : INTERFACE . IDENTIFIER inheritance_spec  (15)
	interface_header : INTERFACE . IDENTIFIER  (16)

	IDENTIFIER  shift 61
	.  error


state 7
	module : MODULE . IDENTIFIER '{' at_least_one_definition '}'  (10)

	IDENTIFIER  shift 62
	.  error


state 8
	struct_type : STRUCT . IDENTIFIER '{' member_list '}'  (162)

	IDENTIFIER  shift 63
	.  error


state 9
	type_dcl : TYPEDEF . type_declarator  (110)

	ANY  shift 64
	BOOLEAN  shift 33
	CHAR  shift 34
	DOUBLE  shift 35
	ENUM  shift 4
	FLOAT  shift 36
	LONG  shift 37
	OBJECT  shift 65
	OCTET  shift 66
	SEQUENCE  shift 67
	SHORT  shift 38
	STRING  shift 39
	STRUCT  shift 8
	UNION  shift 10
	UNSIGNED  shift 40
	WCHAR  shift 68
	SCOPE_DELIMITOR  shift 41
	IDENTIFIER  shift 42
	.  error

	type_spec  goto 69
	base_type_spec  goto 70
	simple_type_spec  goto 71
	template_type_spec  goto 72
	constr_type_spec  goto 73
	floating_pt_type  goto 74
	integer_type  goto 75
	signed_int  goto 45
	signed_long_long_int  goto 46
	signed_long_int  goto 47
	signed_short_int  goto 48
	unsigned_int  goto 49
	unsigned_long_long_int  goto 50
	unsigned_long_int  goto 51
	unsigned_short_int  goto 52
	char_type  goto 76
	wide_char_type  goto 77
	boolean_type  goto 78
	octet_type  goto 79
	any_type  goto 80
	sequence_type  goto 81
	string_type  goto 82
	scoped_name  goto 83
	object_type  goto 84
	type_declarator  goto 85
	struct_type  goto 86
	union_type  goto 87
	enum_type  goto 88


state 10
	union_type : UNION . IDENTIFIER SWITCH '(' switch_type_spec ')' '{' switch_body '}'  (168)

	IDENTIFIER  shift 89
	.  error


state 11
	value_forward_dcl : VALUETYPE . IDENTIFIER  (37)
	value_box_dcl : VALUETYPE . IDENTIFIER type_spec  (38)
	value_header : VALUETYPE . IDENTIFIER value_inheritance_spec  (43)
	value_header : VALUETYPE . IDENTIFIER  (45)

	IDENTIFIER  shift 90
	.  error


state 12
	$accept : specification . $end  (0)

	$end  accept


state 13
	specification : at_least_one_definition .  (1)

	.  reduce 1


state 14
	at_least_one_definition : definition . at_least_one_definition  (2)
	at_least_one_definition : definition .  (3)

	ABSTRACT  shift 1
	CONST  shift 2
	CUSTOM  shift 3
	ENUM  shift 4
	EXCEPTION  shift 5
	INTERFACE  shift 6
	MODULE  shift 7
	STRUCT  shift 8
	TYPEDEF  shift 9
	UNION  shift 10
	VALUETYPE  shift 11
	$end  reduce 3
	'}'  reduce 3

	at_least_one_definition  goto 91
	definition  goto 14
	type_dcl  goto 15
	const_dcl  goto 16
	except_dcl  goto 17
	interface  goto 18
	module  goto 19
	value  goto 20
	interface_dcl  goto 21
	forward_dcl  goto 22
	interface_header  goto 23
	value_dcl  goto 24
	value_abs_dcl  goto 25
	value_box_dcl  goto 26
	value_forward_dcl  goto 27
	value_header  goto 28
	struct_type  goto 29
	union_type  goto 30
	enum_type  goto 31


state 15
	definition : type_dcl . ';'  (4)

	';'  shift 92
	.  error


state 16
	definition : const_dcl . ';'  (5)

	';'  shift 93
	.  error


state 17
	definition : except_dcl . ';'  (6)

	';'  shift 94
	.  error


state 18
	definition : interface . ';'  (7)

	';'  shift 95
	.  error


state 19
	definition : module . ';'  (8)

	';'  shift 96
	.  error


state 20
	definition : value . ';'  (9)

	';'  shift 97
	.  error


state 21
	interface : interface_dcl .  (11)

	.  reduce 11


state 22
	interface : forward_dcl .  (12)

	.  reduce 12


state 23
	interface_dcl : interface_header . '{' interface_body '}'  (13)

	'{'  shift 98
	.  error


state 24
	value : value_dcl .  (32)

	.  reduce 32


state 25
	value : value_abs_dcl .  (33)

	.  reduce 33


state 26
	value : value_box_dcl .  (34)

	.  reduce 34


state 27
	value : value_forward_dcl .  (35)

	.  reduce 35


state 28
	value_dcl : value_header . '{' value_elements '}'  (41)

	'{'  shift 99
	.  error


state 29
	type_dcl : struct_type .  (111)

	.  reduce 111


state 30
	type_dcl : union_type .  (112)

	.  reduce 112


state 31
	type_dcl : enum_type .  (113)

	.  reduce 113


state 32
	value_forward_dcl : ABSTRACT VALUETYPE . IDENTIFIER  (36)
	value_abs_dcl : ABSTRACT VALUETYPE . IDENTIFIER value_inheritance_spec '{' exports '}'  (39)
	value_abs_dcl : ABSTRACT VALUETYPE . IDENTIFIER '{' exports '}'  (40)

	IDENTIFIER  shift 100
	.  error


state 33
	boolean_type : BOOLEAN .  (158)

	.  reduce 158


state 34
	char_type : CHAR .  (156)

	.  reduce 156


state 35
	floating_pt_type : DOUBLE .  (141)

	.  reduce 141


state 36
	floating_pt_type : FLOAT .  (140)

	.  reduce 140


state 37
	signed_long_long_int : LONG . LONG  (147)
	signed_long_int : LONG .  (148)

	LONG  shift 101
	IDENTIFIER  reduce 148
	';'  reduce 148
	','  reduce 148
	')'  reduce 148
	'>'  reduce 148


state 38
	signed_short_int : SHORT .  (149)

	.  reduce 149


state 39
	string_type : STRING . '<' positive_int_const '>'  (189)
	string_type : STRING .  (190)

	'<'  shift 102
	IDENTIFIER  reduce 190
	';'  reduce 190
	','  reduce 190
	'>'  reduce 190


state 40
	unsigned_long_long_int : UNSIGNED . LONG LONG  (153)
	unsigned_long_int : UNSIGNED . LONG  (154)
	unsigned_short_int : UNSIGNED . SHORT  (155)

	LONG  shift 103
	SHORT  shift 104
	.  error


state 41
	scoped_name : SCOPE_DELIMITOR . IDENTIFIER  (30)

	IDENTIFIER  shift 105
	.  error


state 42
	scoped_name : IDENTIFIER .  (29)

	.  reduce 29


state 43
	const_type : floating_pt_type .  (74)

	.  reduce 74


state 44
	const_type : integer_type .  (71)

	.  reduce 71


state 45
	integer_type : signed_int .  (142)

	.  reduce 142


state 46
	signed_int : signed_long_long_int .  (144)

	.  reduce 144


state 47
	signed_int : signed_long_int .  (145)

	.  reduce 145


state 48
	signed_int : signed_short_int .  (146)

	.  reduce 146


state 49
	integer_type : unsigned_int .  (143)

	.  reduce 143


state 50
	unsigned_int : unsigned_long_long_int .  (150)

	.  reduce 150


state 51
	unsigned_int : unsigned_long_int .  (151)

	.  reduce 151


state 52
	unsigned_int : unsigned_short_int .  (152)

	.  reduce 152


state 53
	const_type : char_type .  (72)

	.  reduce 72


state 54
	const_type : boolean_type .  (73)

	.  reduce 73


state 55
	const_type : string_type .  (75)

	.  reduce 75


state 56
	scoped_name : scoped_name . SCOPE_DELIMITOR IDENTIFIER  (31)
	const_type : scoped_name .  (76)

	SCOPE_DELIMITOR  shift 106
	IDENTIFIER  reduce 76


state 57
	const_dcl : CONST const_type . IDENTIFIER '=' const_exp  (70)

	IDENTIFIER  shift 107
	.  error


state 58
	value_header : CUSTOM VALUETYPE . IDENTIFIER value_inheritance_spec  (42)
	value_header : CUSTOM VALUETYPE . IDENTIFIER  (44)

	IDENTIFIER  shift 108
	.  error


state 59
	enum_type : ENUM IDENTIFIER . '{' enumerator extends_enum '}'  (183)

	'{'  shift 109
	.  error


state 60
	except_dcl : EXCEPTION IDENTIFIER . '{' members '}'  (199)

	'{'  shift 110
	.  error


state 61
	forward_dcl : INTERFACE IDENTIFIER .  (14)
	interface_header : INTERFACE IDENTIFIER . inheritance_spec  (15)
	interface_header : INTERFACE IDENTIFIER .  (16)

	':'  shift 111
	';'  reduce 14
	'{'  reduce 16

	inheritance_spec  goto 112


state 62
	module : MODULE IDENTIFIER . '{' at_least_one_definition '}'  (10)

	'{'  shift 113
	.  error


state 63
	struct_type : STRUCT IDENTIFIER . '{' member_list '}'  (162)

	'{'  shift 114
	.  error


state 64
	any_type : ANY .  (160)

	.  reduce 160


state 65
	object_type : OBJECT .  (161)

	.  reduce 161


state 66
	octet_type : OCTET .  (159)

	.  reduce 159


state 67
	sequence_type : SEQUENCE . '<' simple_type_spec ',' positive_int_const '>'  (187)
	sequence_type : SEQUENCE . '<' simple_type_spec '>'  (188)

	'<'  shift 115
	.  error


state 68
	wide_char_type : WCHAR .  (157)

	.  reduce 157


state 69
	type_declarator : type_spec . declarators  (114)

	IDENTIFIER  shift 116
	.  error

	simple_declarator  goto 117
	declarators  goto 118
	declarator  goto 119
	complex_declarator  goto 120
	array_declarator  goto 121


state 70
	simple_type_spec : base_type_spec .  (117)

	.  reduce 117


state 71
	type_spec : simple_type_spec .  (115)

	.  reduce 115


state 72
	simple_type_spec : template_type_spec .  (118)

	.  reduce 118


state 73
	type_spec : constr_type_spec .  (116)

	.  reduce 116


state 74
	base_type_spec : floating_pt_type .  (120)

	.  reduce 120


state 75
	base_type_spec : integer_type .  (121)

	.  reduce 121


state 76
	base_type_spec : char_type .  (122)

	.  reduce 122


state 77
	base_type_spec : wide_char_type .  (123)

	.  reduce 123


state 78
	base_type_spec : boolean_type .  (124)

	.  reduce 124


state 79
	base_type_spec : octet_type .  (125)

	.  reduce 125


state 80
	base_type_spec : any_type .  (126)

	.  reduce 126


state 81
	template_type_spec : sequence_type .  (128)

	.  reduce 128


state 82
	template_type_spec : string_type .  (129)

	.  reduce 129


state 83
	scoped_name : scoped_name . SCOPE_DELIMITOR IDENTIFIER  (31)
	simple_type_spec : scoped_name .  (119)

	SCOPE_DELIMITOR  shift 106
	IDENTIFIER  reduce 119
	';'  reduce 119
	','  reduce 119
	'>'  reduce 119


state 84
	base_type_spec : object_type .  (127)

	.  reduce 127


state 85
	type_dcl : TYPEDEF type_declarator .  (110)

	.  reduce 110


state 86
	constr_type_spec : struct_type .  (130)

	.  reduce 130


state 87
	constr_type_spec : union_type .  (131)

	.  reduce 131


state 88
	constr_type_spec : enum_type .  (132)

	.  reduce 132


state 89
	union_type : UNION IDENTIFIER . SWITCH '(' switch_type_spec ')' '{' switch_body '}'  (168)

	SWITCH  shift 122
	.  error


state 90
	value_forward_dcl : VALUETYPE IDENTIFIER .  (37)
	value_box_dcl : VALUETYPE IDENTIFIER . type_spec  (38)
	value_header : VALUETYPE IDENTIFIER . value_inheritance_spec  (43)
	value_header : VALUETYPE IDENTIFIER .  (45)

	ANY  shift 64
	BOOLEAN  shift 33
	CHAR  shift 34
	DOUBLE  shift 35
	ENUM  shift 4
	FLOAT  shift 36
	LONG  shift 37
	OBJECT  shift 65
	OCTET  shift 66
	SEQUENCE  shift 67
	SHORT  shift 38
	STRING  shift 39
	STRUCT  shift 8
	SUPPORTS  shift 123
	UNION  shift 10
	UNSIGNED  shift 40
	WCHAR  shift 68
	SCOPE_DELIMITOR  shift 41
	IDENTIFIER  shift 42
	':'  shift 124
	';'  reduce 37
	'{'  reduce 45

	type_spec  goto 125
	base_type_spec  goto 70
	simple_type_spec  goto 71
	template_type_spec  goto 72
	constr_type_spec  goto 73
	floating_pt_type  goto 74
	integer_type  goto 75
	signed_int  goto 45
	signed_long_long_int  goto 46
	signed_long_int  goto 47
	signed_short_int  goto 48
	unsigned_int  goto 49
	unsigned_long_long_int  goto 50
	unsigned_long_int  goto 51
	unsigned_short_int  goto 52
	char_type  goto 76
	wide_char_type  goto 77
	boolean_type  goto 78
	octet_type  goto 79
	any_type  goto 80
	sequence_type  goto 81
	string_type  goto 82
	scoped_name  goto 83
	object_type  goto 84
	value_inheritance_spec  goto 126
	struct_type  goto 86
	union_type  goto 87
	enum_type  goto 88


state 91
	at_least_one_definition : definition at_least_one_definition .  (2)

	.  reduce 2


state 92
	definition : type_dcl ';' .  (4)

	.  reduce 4


state 93
	definition : const_dcl ';' .  (5)

	.  reduce 5


state 94
	definition : except_dcl ';' .  (6)

	.  reduce 6


state 95
	definition : interface ';' .  (7)

	.  reduce 7


state 96
	definition : module ';' .  (8)

	.  reduce 8


state 97
	definition : value ';' .  (9)

	.  reduce 9


state 98
	interface_dcl : interface_header '{' . interface_body '}'  (13)
	exports : .  (19)

	ANY  shift 64
	ATTRIBUTE  shift 127
	BOOLEAN  shift 33
	CHAR  shift 34
	CONST  shift 2
	DOUBLE  shift 35
	ENUM  shift 4
	EXCEPTION  shift 5
	FLOAT  shift 36
	LONG  shift 37
	OBJECT  shift 65
	OCTET  shift 66
	ONEWAY  shift 128
	READONLY  shift 129
	SHORT  shift 38
	STRING  shift 39
	STRUCT  shift 8
	TYPEDEF  shift 9
	UNION  shift 10
	UNSIGNED  shift 40
	VOID  shift 130
	WCHAR  shift 68
	SCOPE_DELIMITOR  shift 41
	IDENTIFIER  shift 42
	'}'  reduce 19

	base_type_spec  goto 131
	floating_pt_type  goto 74
	integer_type  goto 75
	signed_int  goto 45
	signed_long_long_int  goto 46
	signed_long_int  goto 47
	signed_short_int  goto 48
	unsigned_int  goto 49
	unsigned_long_long_int  goto 50
	unsigned_long_int  goto 51
	unsigned_short_int  goto 52
	char_type  goto 76
	wide_char_type  goto 77
	boolean_type  goto 78
	octet_type  goto 79
	any_type  goto 80
	string_type  goto 132
	scoped_name  goto 133
	object_type  goto 84
	op_type_spec  goto 134
	param_type_spec  goto 135
	type_dcl  goto 136
	const_dcl  goto 137
	except_dcl  goto 138
	interface_body  goto 139
	exports  goto 140
	export  goto 141
	attr_dcl  goto 142
	op_dcl  goto 143
	struct_type  goto 29
	union_type  goto 30
	enum_type  goto 31
	op_attribute  goto 144


state 99
	value_dcl : value_header '{' . value_elements '}'  (41)
	value_elements : .  (57)

	ANY  shift 64
	ATTRIBUTE  shift 127
	BOOLEAN  shift 33
	CHAR  shift 34
	CONST  shift 2
	DOUBLE  shift 35
	ENUM  shift 4
	EXCEPTION  shift 5
	FACTORY  shift 145
	FLOAT  shift 36
	LONG  shift 37
	OBJECT  shift 65
	OCTET  shift 66
	ONEWAY  shift 128
	PRIVATE  shift 146
	PUBLIC  shift 147
	READONLY  shift 129
	SHORT  shift 38
	STRING  shift 39
	STRUCT  shift 8
	TYPEDEF  shift 9
	UNION  shift 10
	UNSIGNED  shift 40
	VOID  shift 130
	WCHAR  shift 68
	SCOPE_DELIMITOR  shift 41
	IDENTIFIER  shift 42
	'}'  reduce 57

	base_type_spec  goto 131
	floating_pt_type  goto 74
	integer_type  goto 75
	signed_int  goto 45
	signed_long_long_int  goto 46
	signed_long_int  goto 47
	signed_short_int  goto 48
	unsigned_int  goto 49
	unsigned_long_long_int  goto 50
	unsigned_long_int  goto 51
	unsigned_short_int  goto 52
	char_type  goto 76
	wide_char_type  goto 77
	boolean_type  goto 78
	octet_type  goto 79
	any_type  goto 80
	string_type  goto 132
	scoped_name  goto 133
	object_type  goto 84
	op_type_spec  goto 134
	param_type_spec  goto 135
	type_dcl  goto 136
	const_dcl  goto 137
	except_dcl  goto 138
	export  goto 148
	attr_dcl  goto 142
	op_dcl  goto 143
	value_elements  goto 149
	value_element  goto 150
	state_member  goto 151
	init_dcl  goto 152
	struct_type  goto 29
	union_type  goto 30
	enum_type  goto 31
	op_attribute  goto 144


state 100
	value_forward_dcl : ABSTRACT VALUETYPE IDENTIFIER .  (36)
	value_abs_dcl : ABSTRACT VALUETYPE IDENTIFIER . value_inheritance_spec '{' exports '}'  (39)
	value_abs_dcl : ABSTRACT VALUETYPE IDENTIFIER . '{' exports '}'  (40)

	SUPPORTS  shift 123
	'{'  shift 153
	':'  shift 124
	';'  reduce 36

	value_inheritance_spec  goto 154


state 101
	signed_long_long_int : LONG LONG .  (147)

	.  reduce 147


state 102
	string_type : STRING '<' . positive_int_const '>'  (189)

	FALSE_TOKEN  shift 155
	TRUE_TOKEN  shift 156
	SCOPE_DELIMITOR  shift 41
	INTEGER_LITERAL  shift 157
	FLOATING_PT_LITERAL  shift 158
	CHARACTER_LITERAL  shift 159
	STRING_LITERAL  shift 160
	IDENTIFIER  shift 42
	'('  shift 161
	'+'  shift 162
	'-'  shift 163
	'~'  shift 164
	.  error

	scoped_name  goto 165
	const_exp  goto 166
	or_expr  goto 167
	xor_expr  goto 168
	and_expr  goto 169
	shift_expr  goto 170
	add_expr  goto 171
	mult_expr  goto 172
	unary_expr  goto 173
	unary_operator  goto 174
	primary_expr  goto 175
	literal  goto 176
	boolean_literal  goto 177
	positive_int_const  goto 178


state 103
	unsigned_long_long_int : UNSIGNED LONG . LONG  (153)
	unsigned_long_int : UNSIGNED LONG .  (154)

	LONG  shift 179
	IDENTIFIER  reduce 154
	';'  reduce 154
	','  reduce 154
	')'  reduce 154
	'>'  reduce 154


state 104
	unsigned_short_int : UNSIGNED SHORT .  (155)

	.  reduce 155


state 105
	scoped_name : SCOPE_DELIMITOR IDENTIFIER .  (30)

	.  reduce 30


state 106
	scoped_name : scoped_name SCOPE_DELIMITOR . IDENTIFIER  (31)

	IDENTIFIER  shift 180
	.  error


state 107
	const_dcl : CONST const_type IDENTIFIER . '=' const_exp  (70)

	'='  shift 181
	.  error


state 108
	value_header : CUSTOM VALUETYPE IDENTIFIER . value_inheritance_spec  (42)
	value_header : CUSTOM VALUETYPE IDENTIFIER .  (44)

	SUPPORTS  shift 123
	':'  shift 124
	'{'  reduce 44

	value_inheritance_spec  goto 182


state 109
	enum_type : ENUM IDENTIFIER '{' . enumerator extends_enum '}'  (183)

	IDENTIFIER  shift 183
	.  error

	enumerator  goto 184


state 110
	except_dcl : EXCEPTION IDENTIFIER '{' . members '}'  (199)
	members : .  (166)

	ANY  shift 64
	BOOLEAN  shift 33
	CHAR  shift 34
	DOUBLE  shift 35
	ENUM  shift 4
	FLOAT  shift 36
	LONG  shift 37
	OBJECT  shift 65
	OCTET  shift 66
	SEQUENCE  shift 67
	SHORT  shift 38
	STRING  shift 39
	STRUCT  shift 8
	UNION  shift 10
	UNSIGNED  shift 40
	WCHAR  shift 68
	SCOPE_DELIMITOR  shift 41
	IDENTIFIER  shift 42
	'}'  reduce 166
